<resources>
    <string name="app_name">CMProject</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmPassword">Confirm Password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="ForFitness_SignUp_name">4F</string>
    <string name="ForFitnessTradeMark_SignUp_name">For Fitness™</string>
    <string name="SignUpText">Sign Up</string>
    <string name="SignInText">Sign In</string>
    <string name="LogOutText">Log Out</string>
    <string name="SignUpInformation">Please Fill in this Form to Create an Account!</string>
    <string name="SignInInformation">Please Fill in this Form to Sign In!</string>
    <string name="resetPassword">Reset Password</string>
    <string name="sendEmailText">Send</string>
    <string name="recoverPassword">Recover</string>
    <string name="forgotPasswordText">Forgot your Password?</string>
    <string name="noAccountText">No Account?</string>
    <string name="resetPasswordTextInformation">Please insert your email below and press the send button, we will send you an email with a link where you can reset your password!</string>

    <!-- Strings related to facebook login -->
    <string name="facebook_app_id">503170173502064</string>
    <string name="fb_login_protocol_scheme">fb503170173502064</string>
    <string name="title_activity_hidration">HidrationActivity</string>
    <string name="temperatureString">Temperature</string>
    <string name="weightStringH">Weight</string>
    <string name="HumidityString">Humidity</string>
    <string name="waterIntake">Ammount for Today:</string>
    <string name="based">Based On:</string>

    <string-array name="HomeOptions">
        <item>Options</item>
        <item>Logout</item>
    </string-array>

</resources>
