<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSignUpBackground"
    tools:context=".ResetPasswordActivity">

    <Button
        android:id="@+id/resetPassword_button"
        android:layout_width="95dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorSignUpBackground"
        android:text="@string/sendEmailText"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.803" />

    <TextView
        android:id="@+id/appName_textView"
        android:layout_width="39dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/ForFitness_SignUp_name"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appName_textView2"
        android:layout_width="81dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/ForFitnessTradeMark_SignUp_name"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="340dp"
        android:layout_height="493dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorWhite"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888">


        <TextView
            android:id="@+id/resetPassword_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/resetPassword"


            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.114"
            tools:fontFamily="@font/open_sans_bold" />

        <TextView
            android:id="@+id/resetPassword_textInformation"
            android:layout_width="320dp"
            android:layout_height="130dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/resetPasswordTextInformation"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetPassword_textView"
            app:layout_constraintVertical_bias="0.147" />

        <EditText
            android:id="@+id/email_textField"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetPassword_textInformation"
            app:layout_constraintVertical_bias="0.102" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>